@@ -249,7 +249,11 @@ service_restart ()
 # According to LSB, running "restart" on a service already stopped or not
 #   running should be considered successful.
 ##
-  ! $0 status >/dev/null 2>&1 || $0 stop && $0 start
+  if $0 status >/dev/null 2>&1; then
+    $0 stop && $0 start
+  else
+    $0 start
+  fi
 
   case $SYSTEM in
     SUSE)
