@@ -1,5 +1,9 @@
 2006-09-26  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/etc/munge.init.in(service_restart): Replaced negated conditional
+	  with if/else since Solaris shell complains about commands starting
+	  with "!".
+
 	* src/munged/path.c, src/munged/path.h: Fixed bug on FreeBSD where
 	  PATH_MAX was not being defined by "path.h".
 
